Fixed: searchform visibility in widgets

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2476,6 +2476,10 @@
           display: inline-block;
           font-size: .875em;
       }
+
+      .mnmlwp-widgets #searchform {
+          display: block;
+      }
   
       #searchform input#s {
           width: 16em;
